--- a/index.html
+++ b/index.html
@@ -99,30 +99,30 @@
                 <option value='sequ' max='1' min='0' breaks='0,0.465,0.704,0.942' label='GEN_F' legend='gender'>Gender</option>
                 <option value='sequ' max='55' min='0' breaks='0,0.1,17.123,34.389' label='NUM_YR_SP' legend='none'>Years in São Paulo</option>
                 <option value='sequ' max='19.858' min='0' breaks='0,4.242,10.082,15.922' label='NUM_YR_HSE' legend='none'>Years in Current Dwelling</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.16,0.344,0.528' label='BRTH_SP' legend='affirm'>Native Paulista</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.498,0.79,1.081' label='BRTH_REG_NE' legend='affirm'>Non Native Paulista - North-East</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.05,0.112,0.258' label='BRTH_REG_S' legend='affirm'>Non Native Paulista - South-Central</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.05,0.292,0.586' label='DISP_Y' legend='affirm'>Displacement</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.16,0.344,0.528' label='BRTH_SP' legend='secureA'>Native Paulista</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.498,0.79,1.081' label='BRTH_REG_NE' legend='secureA'>Non Native Paulista - North-East</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.05,0.112,0.258' label='BRTH_REG_S' legend='secureA'>Non Native Paulista - South-Central</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.05,0.292,0.586' label='DISP_Y' legend='secureA'>Displacement</option>
                 <option value='sequ' max='5.469' min='0' breaks='0,0.1,1.281,2.61' label='NUM_FAM_LOT' legend='none'>Lot Occupation</option>
                 <option value='sequ' max='5' min='0' breaks='0,2.23,3.431,4.633' label='NUM_PPL_HSHD' legend='none'>Household Inhabitants</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.1,0.107,0.231' label='ED_LVL_0' legend='edu'>Respondent Education - None</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.213,0.43,0.648' label='ED_LVL_1' legend='edu'>Respondent Education - Elementary</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.157,0.361,0.566' label='ED_LVL_2' legend='edu'>Respondent Education - High School</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.091,0.198' label='ED_LVL_3' legend='edu'>Respondent Education - Undergraduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.1,0.107,0.231' label='ED_LVL_0' legend='secureA'>Respondent Education - None</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.213,0.43,0.648' label='ED_LVL_1' legend='secureA'>Respondent Education - Elementary</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.157,0.361,0.566' label='ED_LVL_2' legend='secureA'>Respondent Education - High School</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.091,0.198' label='ED_LVL_3' legend='secureA'>Respondent Education - Undergraduate Deg.</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_4'>ED_LVL_4</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.276,0.523,0.769' label='ED_LVL_MOT_0' legend='edu'>Respondent Mother's Education - None</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.091,0.307,0.522' label='ED_LVL_MOT_1' legend='edu'>Respondent Mother's Education - Elementary </option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.052,0.138' label='ED_LVL_MOT_2' legend='edu'>Respondent Mother's Education - High School </option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.012,0.048' label='ED_LVL_MOT_3' legend='edu'>Respondent Mother's Education - Undergraduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.276,0.523,0.769' label='ED_LVL_MOT_0' legend='secureA'>Respondent Mother's Education - None</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.091,0.307,0.522' label='ED_LVL_MOT_1' legend='secureA'>Respondent Mother's Education - Elementary </option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.052,0.138' label='ED_LVL_MOT_2' legend='secureA'>Respondent Mother's Education - High School </option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.012,0.048' label='ED_LVL_MOT_3' legend='secureA'>Respondent Mother's Education - Undergraduate Deg.</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_MOT_4'>ED_LVL_MOT_4</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.099,0.301' label='ED_LVL_MOT_5' legend='edu'>Respondent Mother's Education - No Information</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.099,0.301' label='ED_LVL_MOT_5' legend='secureA'>Respondent Mother's Education - No Information</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_MOT_6'>ED_LVL_MOT_6</option> -->
-                <option value='sequ' max='1' min='0' breaks='0,0.23,0.456,0.682' label='ED_LVL_FAT_0' legend='edu'>Respondent Father's Education - None</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.048,0.273,0.499' label='ED_LVL_FAT_1' legend='edu'>Respondent Father's Education - Elementary</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.056,0.144' label='ED_LVL_FAT_2' legend='edu'>Respondent Father's Education - High School</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.01,0.017,0.061' label='ED_LVL_FAT_3' legend='edu'>Respondent Father's Education - Undergraduate Deg.</option>
-                <option value='sequ' max='1' min='0' breaks='0,0,0.003,0.004' label='ED_LVL_FAT_4' legend='edu'>Respondent Father's Education - Graduate Deg.</option>
-                <option value='sequ' max='1' min='0' breaks='0,0.09,0.19,0.405' label='ED_LVL_FAT_5' legend='edu'>Respondent Father's Education - No Information</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.23,0.456,0.682' label='ED_LVL_FAT_0' legend='secureA'>Respondent Father's Education - None</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.048,0.273,0.499' label='ED_LVL_FAT_1' legend='secureA'>Respondent Father's Education - Elementary</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.056,0.144' label='ED_LVL_FAT_2' legend='secureA'>Respondent Father's Education - High School</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.01,0.017,0.061' label='ED_LVL_FAT_3' legend='secureA'>Respondent Father's Education - Undergraduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0,0.003,0.004' label='ED_LVL_FAT_4' legend='secureA'>Respondent Father's Education - Graduate Deg.</option>
+                <option value='sequ' max='1' min='0' breaks='0,0.09,0.19,0.405' label='ED_LVL_FAT_5' legend='secureA'>Respondent Father's Education - No Information</option>
                 <!-- <option value='sequ' max='1' min='0' breaks='0,0,0,0' label='ED_LVL_FAT_6'>ED_LVL_FAT_6</option> -->
                 <option value='sequ' max='2.125' min='0' breaks='0,0.048,0.889,1.73' label='NUM_SCH_AGE_CHD' legend='none'>School Age Children</option>
                 <option value='sequ' max='1' min='0' breaks='0,0.224,0.445,0.666' label='EMPL_Y' legend='secureA'>Employment</option>
